fix: Fix workout logs page on smaller screens
- Fix placement of the add exercise button in the workout logs page
  date nav on smaller screens.

- Fix width of the select items header on the workout logs page on
  smaller screens.

--- a/frontend/ai-fitness-tracker/src/pages/workout-logs/components/DateNav/DateNav.css
+++ b/frontend/ai-fitness-tracker/src/pages/workout-logs/components/DateNav/DateNav.css
@@ -33,6 +33,10 @@
   background-color: #2e2e5e;
 }
 
+.open-calendar-button {
+  width: fit-content;
+}
+
 .workout-log-options-button {
   display: flex;
   position: absolute;
@@ -74,5 +78,10 @@
 
   .date-nav {
     width: 70%;
+  }
+
+  .workout-log-add-button {
+    left: 1rem;
+    right: auto;
   }
 }
